; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_chain.c_name_value_to_str.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_chain.c_name_value_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X509_ASN_ENCODING = common dso_local global i32 0, align 4
@CERT_SIMPLE_NAME_STR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @name_value_to_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @name_value_to_str(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @X509_ASN_ENCODING, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @CERT_SIMPLE_NAME_STR, align 4
  %8 = call i32 @cert_name_to_str_with_indent(i32 %5, i32 0, i32* %6, i32 %7, i32* null, i32 0)
  store i32 %8, i32* %3, align 4
  store i32* null, i32** %4, align 8
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %27

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = mul i64 %13, 4
  %15 = trunc i64 %14 to i32
  %16 = call i32* @CryptMemAlloc(i32 %15)
  store i32* %16, i32** %4, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %26

19:                                               ; preds = %11
  %20 = load i32, i32* @X509_ASN_ENCODING, align 4
  %21 = load i32*, i32** %2, align 8
  %22 = load i32, i32* @CERT_SIMPLE_NAME_STR, align 4
  %23 = load i32*, i32** %4, align 8
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @cert_name_to_str_with_indent(i32 %20, i32 0, i32* %21, i32 %22, i32* %23, i32 %24)
  br label %26

26:                                               ; preds = %19, %11
  br label %27

27:                                               ; preds = %26, %1
  %28 = load i32*, i32** %4, align 8
  ret i32* %28
}

declare dso_local i32 @cert_name_to_str_with_indent(i32, i32, i32*, i32, i32*, i32) #1

declare dso_local i32* @CryptMemAlloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
